# opentelemetry-python

exporter/opentelemetry-exporter-jaeger/: pyproject.toml
