[build-system]
requires = [
    "hatchling>=1.8.1",
]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-exporter-jaeger"
dynamic = [
    "version",
]
description = "Jaeger Exporters for OpenTelemetry"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"
authors = [
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
dependencies = [
    "opentelemetry-exporter-jaeger-proto-grpc == 1.12.0",
    "opentelemetry-exporter-jaeger-thrift == 1.12.0",
]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_traces_exporter]
jaeger = "opentelemetry.exporter.jaeger.proto.grpc:JaegerExporter"

[project.urls]
Homepage = "https://github.com/open-telemetry/opentelemetry-python/tree/main/exporter/opentelemetry-exporter-jaeger"

[tool.hatch.version]
path = "opentelemetry_exporter_jaeger/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
